<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grayPrimary"
    android:layout_height="match_parent"
    tools:context=".activity.super_admin.SuperAdminActivity">

    <LinearLayout
        android:padding="24dp"
        android:gravity="center|top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/buttonLogout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/lato"
            android:text="@string/app_name_entered"
            android:textColor="@color/brownPrimary"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/soldier_bg"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_admin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerData"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonLogout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/logout"
        android:textColor="@color/error"
        app:icon="@drawable/ic_round_exit_to_app_24"
        app:iconGravity="textStart"
        app:iconTint="@color/error"
        app:strokeColor="@color/error" />

</RelativeLayout>