<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailInboxActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/imageBottom"
        android:orientation="vertical">

        <ImageView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/dummy_inbox_title"
            android:textColor="@color/brownPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_light"
            android:letterSpacing="0.08"
            android:text="Untuk 502 UJWALA YUDHA"
            android:textColor="@color/greenPrimary"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/lato"
            android:textColor="@color/greenPrimary"
            android:textSize="12sp"
            android:letterSpacing="0.08"
            android:lineHeight="20dp"
            android:text="@string/dummy_inbox_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/dummy_inbox_date"
            android:fontFamily="@font/lato_light"
            android:textSize="12sp"
            android:id="@+id/textDate"/>

    </LinearLayout>

    <ImageView
        android:visibility="invisible"
        android:id="@+id/imageBottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_infantry" />


</RelativeLayout>